<resources>
    <string name="app_name">BFF</string>
    <string name="button">Button</string>
    <string name="bff_dog_cat"><![CDATA[BFF dog&cat]]></string>
    <string name="button1">Button</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name1">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="email1">Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="user_name">User Name</string>
    <string name="line">_____________________________________________________</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="animal">Animal</string>
    <string name="business_owner">business owner</string>
    <string name="choose_visit_type">Choose Visit Type:</string>
    <string name="by_einav_benito_bar_goldman_niv_motilsky">By : Einav Benito , Bar Goldman , Niv Motilsky</string>
    <string name="logo">TODO</string>
    <string name="sing_up_n">Sing Up n</string>
    <string name="sing_up" />
    <string name="sign_up">Sign Up</string>
    <string name="already_account_login_here">Already Account? Login Here</string>
    <string name="register">Register</string>
    <string name="password_singup">Password</string>
    <string name="email_singup">Email</string>
    <string name="full_name_singup">Full name</string>
    <string name="create_a_new_account_for_your_animal">create a new account for your animal</string>
    <string name="create_a_new_account_for_your_business">create a new account for your business</string>
    <string name="remember_password">Remember Password!</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="continue2">Continue</string>
    <string name="continue1">continue</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="send_email">Send Email</string>
    <string name="hello_animal">Hello_animal</string>
    <string name="anima">anima</string>
    <string name="information">Information</string>
    <string name="information1">Information</string>
    <string name="hairdresser">Hairdresser</string>
    <string name="edit">Edit</string>
    <string name="i_got_lost">I got lost</string>
    <string name="sad">sad</string>
    <string name="shop">shop</string>
    <string name="edit1">Edit</string>
    <string name="business_search">Business search</string>
    <string name="image1">TODO</string>
    <string name="button2">TODO</string>
    <string name="button3">TODO</string>
    <string name="button4">TODO</string>
    <string name="button5">TODO</string>
    <string name="add">add</string>
    <string name="hello_animal1">Hello animal</string>
    <string name="hellow_business">hellow business</string>
    <string name="view_client">view client</string>
    <string name="add_client">add client</string>
    <string name="remove_client">remove client</string>
    <string name="hello_business">hello_business</string>
    <string name="remove">remove</string>
    <string name="view">view</string>
    <string name="dogs_and_cats_and_everything_in_between">Dogs and cats and everything in between</string>
    <string name="clicking_on_the_following_button_will_take_you_to_the_pafiz_website">Clicking on the following button will take you to the \'Pafiz\' website</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="hair">hair</string>
    <string name="hairdressing_salon1">hairdressing_salon1</string>
    <string name="veterinary_medicine1">veterinary_medicine1</string>
    <string name="dog_walker1">dog_walker1</string>
    <string name="dog">dog</string>
    <string name="vet">vet</string>
    <string name="phone">Phone:</string>
    <string name="business_name">Business Name:</string>
    <string name="buttonn">Button</string>
    <string name="all">All</string>
    <string name="hello_business1">hello business</string>
    <string name="edit_business">edit business</string>
    <string name="logout">logout</string>
    <string name="send_sales">send sales</string>
    <string name="sales">sales</string>
    <string name="todo1">TODO</string>
</resources>