<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >


    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Hello"
        android:textColor="#EA84A7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:text="@string/information1"
        android:textColor="#EA84A7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="250dp"
        android:text="@string/i_got_lost"
        android:textColor="#EA84A7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="67dp"
        android:layout_height="36dp"
        android:layout_marginStart="27dp"
        android:text="@string/edit1"
        android:textColor="#EA84A7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/business_search"
        android:textColor="#EA84A7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pretty_button" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/i_got_lost"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/lost"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pretty_button"

        />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="125dp"
        android:layout_height="125sp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shop"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:srcCompat="@drawable/shope" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="280dp"
        android:contentDescription="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pretty_button" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/edit"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="276dp"
        android:contentDescription="@string/button4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pretty_button" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/information"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/informshion"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="@string/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pretty_button2" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_user_image"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.529" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="124dp"
        android:contentDescription="@string/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pretty_button" />

    <Button
        android:id="@+id/singUp_LogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/colorbutton3"
        android:padding="10dp"
        android:text="logout"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="view"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:srcCompat="@drawable/vieww" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:text="View queues"
        android:textColor="#EA84A7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13" />


</androidx.constraintlayout.widget.ConstraintLayout>