<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_heading"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="13dp"
                android:autofillHints=""
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/enter_you_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/bt_forget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toTopOf="parent"
                >

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/bt_forget"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="68dp"
                android:background="@color/design_default_color_primary"
                android:elevation="2dp"
                android:onClick="performCodeVerify"
                android:text="@string/continue1"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_email"
                app:layout_constraintWidth_percent="0.7" />

            <LinearLayout
                android:id="@+id/layout_already_have_account"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="1.0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/bt_forget"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/tv_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:text="@string/remember_password"
                    />

                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="18sp"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    android:text="@string/login"
                    android:onClick="goToLogin"

                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>